Add DCHECK when service handler is missing

At this point we've already verified that the service exists and that the client
is allowed to connect, so failure to create the service indicates a bug in its
setup (i.e. it wasn't registered properly).

BUG=694807

Review-Url: https://codereview.chromium.org/2716513002
Cr-Commit-Position: refs/heads/master@{#452344}