content/common/service_manager/service_manager_connection_impl.cc
@@ -511,6 +511,8 @@ void ServiceManagerConnectionImpl::CreateService(
     service_manager::mojom::ServiceRequest request,
     const std::string& name) {
   auto it = request_handlers_.find(name);
+  DCHECK(it != request_handlers_.end())
+      << "Can't create service " << name << ". No handler found.";
   if (it != request_handlers_.end())
     it->second.Run(std::move(request));
 }
@@ -541,4 +543,3 @@ void ServiceManagerConnectionImpl::GetInterface(
 }
 
 }  // namespace content
-
